@@ -1,3 +1,10 @@
+2005-05-09 - johan
+Miscellaneous additions to make it possible to build fVDI with
+FreeType support without depending on external library code.
+(Still untested functionality, but it builds OK.)
+Minor change to vqt_name for vector font support.
+FreeType stuff checked into CVS.
+
 2005-05-07 - standa
 Fatal Return stack issue fixed. Now the FreeType2 again works with
 the changed asm parts.
